# AnsibleScriptRunner

./: .gitignore  CMakeLists.txt  README.md  clang-format  user_manual.md
include/: ansible_questions.h  console_output.h  move_script.h  stream_manipulation.bak.h  stream_manipulation.h  utility.h
src/: ansi.cpp  console_output.cpp
src/ansible/: add_user.yml  clean_apt.yml  install_edge.yml  install_teams.yml  install_tunes.yml
src/input/: ansi.cpp  ansible_questions.cpp  console_output.cpp  main.cpp  move_script.cpp  utility.cpp
